examples/test/testpolicy15883.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15883
  namespace: namespace127
spec:
  podSelector:
    matchLabels:
      key44: value40
      key36: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value13
          key45: value17
      podSelector:
        matchLabels:
          key25: value12
